# ot-harjoitustyo

./: .coveragerc  .env  .env.test  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopolid.md
src/: clock.py  config.py  game_loop.py  index.py  mouse_position.py  playfield.py  renderer.py  run.py
src/components/: game.py  level.py  playfield.py
src/database/: database.sqlite  database_connection.py  initialize_database.py  test_database.sqlite
src/game/: game.py  game_loop.py
src/repositories/: score_repository.py
src/services/: clock.py  event_queue.py  game.py  mouse.py
src/services/database/: score_service.py
src/services/game/: game.py  game_loop.py  level.py
src/sprites/: cell.py
src/tests/: conftest.py  game_loop_test.py  game_test.py  level_test.py  playfield_test.py  score_repository_test.py  score_service_test.py
src/ui/: menu.py  menus.py  renderer.py
