[tool.poetry]
name = "visuaalimuisti"
version = "0.1.0"
description = ""
authors = ["Sampo <57003465+realtalin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
pygame-menu = "^4.2.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
